@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.9
 
 	- Documentation updates (STR #2904)
+	- The scheduler no longer enforces configuration file
+	  permissions on symlinked files (STR #2937)
 	- CUPS now reinitializes the DNS resolver on failures
 	  (STR #2920)
 	- The CUPS desktop menu item was broken (STR #2924)
